// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shared: data-core: interfaces: Condition should create a condition entity 1`] = `
IModel {
  "_formFields": Array [
    Object {
      "filterName": "title",
      "name": "title",
      "required": true,
      "title": "TITLE",
      "type": "text",
    },
    Object {
      "filterName": "type",
      "name": "type",
      "required": true,
      "title": "TYPE",
      "translate": true,
      "type": "autocomplete",
      "values": Array [
        "field",
        "tags",
        "groups",
      ],
    },
    Object {
      "condition": "type==\\"field\\"",
      "filterName": "field",
      "idAttributeName": "name",
      "name": "field",
      "required": true,
      "title": "FIELD",
      "type": "autocomplete",
    },
    Object {
      "condition": "type",
      "conditionalValues": Array [
        Object {
          "condition": "type!=\\"field\\"",
          "values": Array [
            "in",
            "notin",
          ],
        },
        Object {
          "condition": "field.type==\\"selectmulti\\" or field.type==\\"selectbuttonsmulti\\"",
          "values": Array [
            "in",
            "notin",
          ],
        },
        Object {
          "condition": "field.type==\\"checkbox\\" or field.type==\\"toggle\\"",
          "values": Array [
            "equals",
            "notequals",
          ],
        },
        Object {
          "condition": "field.type==\\"select\\" or field.type==\\"selectbuttons\\" or field.type==\\"autocomplete\\"",
          "values": Array [
            "equals",
            "in",
            "notin",
          ],
        },
      ],
      "defaultValues": Array [
        "equals",
        "notequals",
        "greaterthan",
        "lessthan",
      ],
      "filterName": "operator",
      "multiple": false,
      "name": "operator",
      "required": true,
      "title": "OPERATOR",
      "translate": true,
      "type": "autocomplete",
    },
    Object {
      "collectionName": "locations",
      "condition": "type==\\"tags\\"",
      "filterName": "tags",
      "multiple": true,
      "name": "tags",
      "required": true,
      "tag": true,
      "title": "TAGS",
      "type": "autocomplete",
    },
    Object {
      "clearable": false,
      "collectionName": "groups",
      "condition": "type==\\"groups\\"",
      "filterName": "group",
      "filters": Array [
        Array [
          Object {
            "field": "isRole",
            "operator": Object {
              "_id": "neq",
            },
            "value": true,
          },
          Object {
            "field": "type",
            "operator": Object {
              "_id": "nin",
            },
            "value": Array [
              "plan",
            ],
          },
        ],
      ],
      "hiddenFields": Array [
        "isRole",
        "type",
      ],
      "idOnly": true,
      "mapTransform": [Function],
      "multiple": true,
      "name": "group",
      "required": true,
      "title": "GROUPS",
      "type": "autocomplete",
    },
    Object {
      "condition": "type==\\"field\\" and (field.type==\\"checkbox\\" or field.type==\\"toggle\\" or field.type==\\"select\\" or field.type==\\"selectmulti\\" or field.type==\\"selectbuttons\\" or field.type==\\"selectbuttonsmulti\\" or field.type==\\"autocomplete\\" or field.type==\\"selectimage\\")",
      "defaultValues": Array [
        "true",
        "false",
      ],
      "dynamicValues": "field.values",
      "filterName": "values",
      "multiple": true,
      "name": "values",
      "required": true,
      "title": "VALUES",
      "type": "autocomplete",
    },
    Object {
      "condition": "type==\\"field\\" and (field.type==\\"text\\" or field.type==\\"email\\" or field.type==\\"number\\" or field.type==\\"formula\\" or field.type==\\"date\\" or field.type==\\"tel\\" or field.type==\\"time\\" or field.type==\\"range\\" or field.type==\\"starrating\\")",
      "defaultType": "text",
      "dynamicType": "field.type",
      "filterName": "value",
      "name": "value",
      "required": true,
      "title": "VALUE",
    },
  ],
  "appareance": Map {},
  "className": "Condition",
  "collectionName": undefined,
  "feathersService": undefined,
  "fields": undefined,
  "include": undefined,
  "isCustom": undefined,
  "mappingFields": Map {},
  "searchSubquery": undefined,
  "searchableFields": Array [],
  "type": [Function],
}
`;

exports[`shared: data-core: interfaces: Condition should create a conditional field entity 1`] = `
IModel {
  "_formFields": Array [
    Object {
      "filterName": "fieldTitle",
      "name": "fieldTitle",
      "readonly": true,
      "title": "FIELDIF",
      "type": "text",
    },
    Object {
      "conditionalValues": Array [
        Object {
          "condition": "type!=\\"field\\"",
          "values": Array [
            "in",
            "notin",
          ],
        },
        Object {
          "condition": "field.type==\\"selectmulti\\" or field.type==\\"selectbuttonsmulti\\"",
          "values": Array [
            "in",
            "notin",
          ],
        },
        Object {
          "condition": "field.type==\\"checkbox\\" or field.type==\\"toggle\\"",
          "values": Array [
            "equals",
            "notequals",
          ],
        },
        Object {
          "condition": "field.type==\\"select\\" or field.type==\\"selectbuttons\\" or field.type==\\"autocomplete\\"",
          "values": Array [
            "equals",
            "in",
            "notin",
          ],
        },
      ],
      "defaultValues": Array [
        "equals",
        "notequals",
        "greaterthan",
        "lessthan",
      ],
      "filterName": "operator",
      "multiple": false,
      "name": "operator",
      "required": true,
      "title": "FIELDIS",
      "translate": true,
      "type": "autocomplete",
    },
    Object {
      "condition": "type==\\"field\\" and (field.type==\\"checkbox\\" or field.type==\\"toggle\\" or field.type==\\"select\\" or field.type==\\"selectmulti\\" or field.type==\\"selectbuttons\\" or field.type==\\"selectbuttonsmulti\\" or field.type==\\"autocomplete\\" or field.type==\\"selectimage\\")",
      "defaultValues": Array [
        "true",
        "false",
      ],
      "dynamicValues": "field.values",
      "filterName": "values",
      "multiple": true,
      "name": "values",
      "required": true,
      "title": "VALUES",
      "type": "autocomplete",
    },
    Object {
      "condition": "type==\\"field\\" and (field.type==\\"text\\" or field.type==\\"email\\" or field.type==\\"number\\" or field.type==\\"formula\\" or field.type==\\"date\\" or field.type==\\"tel\\" or field.type==\\"time\\" or field.type==\\"range\\" or field.type==\\"starrating\\")",
      "defaultType": "text",
      "dynamicType": "field.type",
      "filterName": "value",
      "name": "value",
      "required": true,
      "title": "VALUE",
    },
    Object {
      "filterName": "newFieldType",
      "name": "newFieldType",
      "required": true,
      "title": "FIELDTYPE",
      "translate": true,
      "type": "autocomplete",
      "values": Array [
        "image",
        "photo",
        "multiphotos",
        "selectbuttons",
        "selectbuttonsmulti",
        "select",
        "selectmulti",
        "text",
        "textarea",
        "number",
        "starrating",
        "date",
        "time",
        "signature",
        "emailreport",
        "todo",
        "task",
        "checklist",
        "video",
        "audio",
        "document",
        "videoplayer",
        "barcode",
        "catalog",
        "selectimage",
        "autocomplete",
        "checkbox",
        "toggle",
        "tel",
        "email",
        "ranking",
        "range",
        "address",
        "location",
        "datetime-local",
        "timer",
        "formula",
      ],
    },
    Object {
      "filterName": "newfieldTitle",
      "name": "newfieldTitle",
      "required": true,
      "title": "TITLE",
      "type": "text",
    },
    Object {
      "filterName": "newfieldDescription",
      "name": "newfieldDescription",
      "title": "INSTRUCTIONS",
      "type": "textarea",
    },
    Object {
      "filterName": "newFieldRequired",
      "name": "newFieldRequired",
      "title": "MANDATORY",
      "type": "checkbox",
    },
  ],
  "appareance": Map {},
  "className": "ConditionalField",
  "collectionName": undefined,
  "feathersService": undefined,
  "fields": undefined,
  "include": undefined,
  "isCustom": undefined,
  "mappingFields": Map {},
  "searchSubquery": undefined,
  "searchableFields": Array [],
  "type": [Function],
}
`;
